// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Maps 1`] = `
"h1{
background:darkyellow
}"
`;

exports[`Nested Basic 1`] = `
"body h1{
font-weight:700
}

body h2{
font-weight:400
}"
`;

exports[`Nested Parent Selector 1`] = `
"body ul li:first-child{
margin-top:0
}"
`;

exports[`Sassy Mixins 1`] = `
"h1{
color:#ff4136
}"
`;

exports[`Sassy Variables 1`] = `
"h1{
background:#ff4136
}"
`;
